--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
       <h1>
 <a id="projectjty" class="anchor" href="#projectjty" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ProjectJTY</h1>
 
-<p>Project Journey to the West： A brief description of the relationship between the characters in the novel.</p>
+<p>Project Journey to the West： A brief description of the relationship between the characters in the novel.
+
+The project is build upon Node.js. Technologies used include expression, d3.js, bookshelf.js, Bootstrap.
+
+A live site is hosted on the Heroku website, the link is https://shrouded-scrubland-59311.herokuapp.com/xiyouji</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/KevinSJ/ProjectJTY">Projectjty</a> is maintained by <a href="https://github.com/KevinSJ">KevinSJ</a>.</span>
