--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 The project is build upon Node.js. Technologies used include expression, d3.js, bookshelf.js, Bootstrap.
 
-A live site is hosted on the Heroku website, the link is https://shrouded-scrubland-59311.herokuapp.com/xiyouji</p>
+A live site is hosted on the Heroku website, the link is <a href=https://shrouded-scrubland-59311.herokuapp.com/xiyouji target=_blank>https://shrouded-scrubland-59311.herokuapp.com/xiyouji</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/KevinSJ/ProjectJTY">Projectjty</a> is maintained by <a href="https://github.com/KevinSJ">KevinSJ</a>.</span>
